src/OpenCvSharp.Native/include/open_cv_sharp/calib3d/calib3d.h

typedef struct jyppx_ocv_stereo_bm jyppx_ocv_stereo_bm;
typedef struct jyppx_ocv_stereo_sgbm jyppx_ocv_stereo_sgbm;
typedef struct jyppx_ocv_calib3d_point2f
{
    float x;
    float y;
} jyppx_ocv_calib3d_point2f;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_rectify3_collinear(
    const jyppx_ocv_mat* camera_matrix1,
    const jyppx_ocv_mat* dist_coeffs1,
    const jyppx_ocv_mat* camera_matrix2,
    const jyppx_ocv_mat* dist_coeffs2,
    const jyppx_ocv_mat* camera_matrix3,
    const jyppx_ocv_mat* dist_coeffs3,
    const int* image_point1_offsets,
    int image_point1_group_count,
    const jyppx_ocv_calib3d_point2f* image_points1,
    int image_point1_count,
    const int* image_point3_offsets,
    int image_point3_group_count,
    const jyppx_ocv_calib3d_point2f* image_points3,
    int image_point3_count,
    int image_width,
    int image_height,
    const jyppx_ocv_mat* r12,
    const jyppx_ocv_mat* t12,
    const jyppx_ocv_mat* r13,
    const jyppx_ocv_mat* t13,
    jyppx_ocv_mat* r1,
    jyppx_ocv_mat* r2,
    jyppx_ocv_mat* r3,
    jyppx_ocv_mat* p1,
    jyppx_ocv_mat* p2,
    jyppx_ocv_mat* p3,
    jyppx_ocv_mat* q,
    double alpha,
    int new_image_width,
    int new_image_height,
    int flags,
    int* roi1_x,
    int* roi1_y,
    int* roi1_width,
    int* roi1_height,
    int* roi2_x,
    int* roi2_y,
    int* roi2_width,
    int* roi2_height,
    float* scale);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_create(
    int num_disparities,
    int block_size,
    jyppx_ocv_stereo_bm** stereo_bm);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_stereo_bm_release(
    jyppx_ocv_stereo_bm* stereo_bm);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_compute(
    jyppx_ocv_stereo_bm* stereo_bm,
    const jyppx_ocv_mat* left,
    const jyppx_ocv_mat* right,
    jyppx_ocv_mat* disparity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_min_disparity(const jyppx_ocv_stereo_bm* stereo_bm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_min_disparity(jyppx_ocv_stereo_bm* stereo_bm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_num_disparities(const jyppx_ocv_stereo_bm* stereo_bm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_num_disparities(jyppx_ocv_stereo_bm* stereo_bm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_block_size(const jyppx_ocv_stereo_bm* stereo_bm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_block_size(jyppx_ocv_stereo_bm* stereo_bm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_speckle_window_size(const jyppx_ocv_stereo_bm* stereo_bm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_speckle_window_size(jyppx_ocv_stereo_bm* stereo_bm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_speckle_range(const jyppx_ocv_stereo_bm* stereo_bm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_speckle_range(jyppx_ocv_stereo_bm* stereo_bm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_disp12_max_diff(const jyppx_ocv_stereo_bm* stereo_bm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_disp12_max_diff(jyppx_ocv_stereo_bm* stereo_bm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_pre_filter_type(const jyppx_ocv_stereo_bm* stereo_bm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_pre_filter_type(jyppx_ocv_stereo_bm* stereo_bm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_pre_filter_size(const jyppx_ocv_stereo_bm* stereo_bm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_pre_filter_size(jyppx_ocv_stereo_bm* stereo_bm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_pre_filter_cap(const jyppx_ocv_stereo_bm* stereo_bm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_pre_filter_cap(jyppx_ocv_stereo_bm* stereo_bm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_texture_threshold(const jyppx_ocv_stereo_bm* stereo_bm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_texture_threshold(jyppx_ocv_stereo_bm* stereo_bm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_uniqueness_ratio(const jyppx_ocv_stereo_bm* stereo_bm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_uniqueness_ratio(jyppx_ocv_stereo_bm* stereo_bm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_smaller_block_size(const jyppx_ocv_stereo_bm* stereo_bm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_smaller_block_size(jyppx_ocv_stereo_bm* stereo_bm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_roi1(const jyppx_ocv_stereo_bm* stereo_bm, int* x, int* y, int* width, int* height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_roi1(jyppx_ocv_stereo_bm* stereo_bm, int x, int y, int width, int height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_get_roi2(const jyppx_ocv_stereo_bm* stereo_bm, int* x, int* y, int* width, int* height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_bm_set_roi2(jyppx_ocv_stereo_bm* stereo_bm, int x, int y, int width, int height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_create(
    int min_disparity,
    int num_disparities,
    int block_size,
    int p1,
    int p2,
    int disp12_max_diff,
    int pre_filter_cap,
    int uniqueness_ratio,
    int speckle_window_size,
    int speckle_range,
    int mode,
    jyppx_ocv_stereo_sgbm** stereo_sgbm);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_stereo_sgbm_release(
    jyppx_ocv_stereo_sgbm* stereo_sgbm);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_compute(
    jyppx_ocv_stereo_sgbm* stereo_sgbm,
    const jyppx_ocv_mat* left,
    const jyppx_ocv_mat* right,
    jyppx_ocv_mat* disparity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_get_min_disparity(const jyppx_ocv_stereo_sgbm* stereo_sgbm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_set_min_disparity(jyppx_ocv_stereo_sgbm* stereo_sgbm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_get_num_disparities(const jyppx_ocv_stereo_sgbm* stereo_sgbm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_set_num_disparities(jyppx_ocv_stereo_sgbm* stereo_sgbm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_get_block_size(const jyppx_ocv_stereo_sgbm* stereo_sgbm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_set_block_size(jyppx_ocv_stereo_sgbm* stereo_sgbm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_get_speckle_window_size(const jyppx_ocv_stereo_sgbm* stereo_sgbm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_set_speckle_window_size(jyppx_ocv_stereo_sgbm* stereo_sgbm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_get_speckle_range(const jyppx_ocv_stereo_sgbm* stereo_sgbm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_set_speckle_range(jyppx_ocv_stereo_sgbm* stereo_sgbm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_get_disp12_max_diff(const jyppx_ocv_stereo_sgbm* stereo_sgbm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_set_disp12_max_diff(jyppx_ocv_stereo_sgbm* stereo_sgbm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_get_pre_filter_cap(const jyppx_ocv_stereo_sgbm* stereo_sgbm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_set_pre_filter_cap(jyppx_ocv_stereo_sgbm* stereo_sgbm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_get_uniqueness_ratio(const jyppx_ocv_stereo_sgbm* stereo_sgbm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_set_uniqueness_ratio(jyppx_ocv_stereo_sgbm* stereo_sgbm, int value);