src/OpenCvSharp/Internal/Interop/NativeMethods.Calib3D.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_rectify3_collinear")]
        internal static partial int Calib3DRectify3Collinear(IntPtr cameraMatrix1, IntPtr distCoeffs1, IntPtr cameraMatrix2, IntPtr distCoeffs2, IntPtr cameraMatrix3, IntPtr distCoeffs3, int* imagePoint1Offsets, int imagePoint1GroupCount, Calib3DPoint2fNative* imagePoints1, int imagePoint1Count, int* imagePoint3Offsets, int imagePoint3GroupCount, Calib3DPoint2fNative* imagePoints3, int imagePoint3Count, int imageWidth, int imageHeight, IntPtr r12, IntPtr t12, IntPtr r13, IntPtr t13, IntPtr r1, IntPtr r2, IntPtr r3, IntPtr p1, IntPtr p2, IntPtr p3, IntPtr q, double alpha, int newImageWidth, int newImageHeight, int flags, out int roi1X, out int roi1Y, out int roi1Width, out int roi1Height, out int roi2X, out int roi2Y, out int roi2Width, out int roi2Height, out float scale);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_create")]
        internal static partial int StereoBMCreate(int numDisparities, int blockSize, out IntPtr stereoBM);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_release")]
        internal static partial void StereoBMRelease(IntPtr stereoBM);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_compute")]
        internal static partial int StereoBMCompute(IntPtr stereoBM, IntPtr left, IntPtr right, IntPtr disparity);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_min_disparity")]
        internal static partial int StereoBMGetMinDisparity(IntPtr stereoBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_min_disparity")]
        internal static partial int StereoBMSetMinDisparity(IntPtr stereoBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_num_disparities")]
        internal static partial int StereoBMGetNumDisparities(IntPtr stereoBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_num_disparities")]
        internal static partial int StereoBMSetNumDisparities(IntPtr stereoBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_block_size")]
        internal static partial int StereoBMGetBlockSize(IntPtr stereoBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_block_size")]
        internal static partial int StereoBMSetBlockSize(IntPtr stereoBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_speckle_window_size")]
        internal static partial int StereoBMGetSpeckleWindowSize(IntPtr stereoBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_speckle_window_size")]
        internal static partial int StereoBMSetSpeckleWindowSize(IntPtr stereoBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_speckle_range")]
        internal static partial int StereoBMGetSpeckleRange(IntPtr stereoBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_speckle_range")]
        internal static partial int StereoBMSetSpeckleRange(IntPtr stereoBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_disp12_max_diff")]
        internal static partial int StereoBMGetDisp12MaxDiff(IntPtr stereoBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_disp12_max_diff")]
        internal static partial int StereoBMSetDisp12MaxDiff(IntPtr stereoBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_pre_filter_type")]
        internal static partial int StereoBMGetPreFilterType(IntPtr stereoBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_pre_filter_type")]
        internal static partial int StereoBMSetPreFilterType(IntPtr stereoBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_pre_filter_size")]
        internal static partial int StereoBMGetPreFilterSize(IntPtr stereoBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_pre_filter_size")]
        internal static partial int StereoBMSetPreFilterSize(IntPtr stereoBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_pre_filter_cap")]
        internal static partial int StereoBMGetPreFilterCap(IntPtr stereoBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_pre_filter_cap")]
        internal static partial int StereoBMSetPreFilterCap(IntPtr stereoBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_texture_threshold")]
        internal static partial int StereoBMGetTextureThreshold(IntPtr stereoBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_texture_threshold")]
        internal static partial int StereoBMSetTextureThreshold(IntPtr stereoBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_uniqueness_ratio")]
        internal static partial int StereoBMGetUniquenessRatio(IntPtr stereoBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_uniqueness_ratio")]
        internal static partial int StereoBMSetUniquenessRatio(IntPtr stereoBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_smaller_block_size")]
        internal static partial int StereoBMGetSmallerBlockSize(IntPtr stereoBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_smaller_block_size")]
        internal static partial int StereoBMSetSmallerBlockSize(IntPtr stereoBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_roi1")]
        internal static partial int StereoBMGetROI1(IntPtr stereoBM, out int x, out int y, out int width, out int height);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_roi1")]
        internal static partial int StereoBMSetROI1(IntPtr stereoBM, int x, int y, int width, int height);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_get_roi2")]
        internal static partial int StereoBMGetROI2(IntPtr stereoBM, out int x, out int y, out int width, out int height);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_bm_set_roi2")]
        internal static partial int StereoBMSetROI2(IntPtr stereoBM, int x, int y, int width, int height);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_create")]
        internal static partial int StereoSGBMCreate(int minDisparity, int numDisparities, int blockSize, int p1, int p2, int disp12MaxDiff, int preFilterCap, int uniquenessRatio, int speckleWindowSize, int speckleRange, int mode, out IntPtr stereoSGBM);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_release")]
        internal static partial void StereoSGBMRelease(IntPtr stereoSGBM);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_compute")]
        internal static partial int StereoSGBMCompute(IntPtr stereoSGBM, IntPtr left, IntPtr right, IntPtr disparity);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_get_min_disparity")]
        internal static partial int StereoSGBMGetMinDisparity(IntPtr stereoSGBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_set_min_disparity")]
        internal static partial int StereoSGBMSetMinDisparity(IntPtr stereoSGBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_get_num_disparities")]
        internal static partial int StereoSGBMGetNumDisparities(IntPtr stereoSGBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_set_num_disparities")]
        internal static partial int StereoSGBMSetNumDisparities(IntPtr stereoSGBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_get_block_size")]
        internal static partial int StereoSGBMGetBlockSize(IntPtr stereoSGBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_set_block_size")]
        internal static partial int StereoSGBMSetBlockSize(IntPtr stereoSGBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_get_speckle_window_size")]
        internal static partial int StereoSGBMGetSpeckleWindowSize(IntPtr stereoSGBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_set_speckle_window_size")]
        internal static partial int StereoSGBMSetSpeckleWindowSize(IntPtr stereoSGBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_get_speckle_range")]
        internal static partial int StereoSGBMGetSpeckleRange(IntPtr stereoSGBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_set_speckle_range")]
        internal static partial int StereoSGBMSetSpeckleRange(IntPtr stereoSGBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_get_disp12_max_diff")]
        internal static partial int StereoSGBMGetDisp12MaxDiff(IntPtr stereoSGBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_set_disp12_max_diff")]
        internal static partial int StereoSGBMSetDisp12MaxDiff(IntPtr stereoSGBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_get_pre_filter_cap")]
        internal static partial int StereoSGBMGetPreFilterCap(IntPtr stereoSGBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_set_pre_filter_cap")]
        internal static partial int StereoSGBMSetPreFilterCap(IntPtr stereoSGBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_get_uniqueness_ratio")]
        internal static partial int StereoSGBMGetUniquenessRatio(IntPtr stereoSGBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_set_uniqueness_ratio")]
        internal static partial int StereoSGBMSetUniquenessRatio(IntPtr stereoSGBM, int value);
